--- a/marketing-resource/xml/Header&Footer/footer.html
+++ b/marketing-resource/xml/Header&Footer/footer.html
@@ -10,14 +10,14 @@
                           <li class="hidden-md hidden-lg"><a id="footer-weixin-id" href="//mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzA4MzA1OTc1MA==&scene=110#wechat_redirect"
                                  title="Public No. for Microsoft Cloud S&amp;T " data-content="微信查找公众号 <strong>Microsoft 云科技</strong>，一手掌握微软云计算最新资讯。"><i class="icon icon-weixin"></i> Public No. for Microsoft Cloud S&amp;T </a></li>
                           <li class="hidden-md hidden-lg"><a id="footer-support-id" href="//mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzI0Njc5OTM4Mg==&scene=124#wechat_redirect"
-                                 title="Public No. to get quick support" data-content="微信查找公众号 <strong>Azure 云技术支持</strong>,快速解答技术相关问题。"><i class="icon icon-weixin"></i>Public No. for Azure Cloud Technical Support </a></li>
+                                 title="get swift answers to technical questions." data-content="微信查找公众号 <strong>Azure 云技术支持</strong>,快速解答技术相关问题。"><i class="icon icon-weixin"></i>Public No. for Azure Cloud Technical Support </a></li>
                       </ul>
                       <div class="footer-qrcode clearfix hidden-xs hidden-sm">
-                        <div class="qrcode-wrapper mc_qr2"><span>Public No. for Microsoft Cloud S&amp;T</span></div>
+                        <div class="qrcode-wrapper mc_qr2"><span>get the latest news on Microsoft Cloud Computing</span></div>
                       </div>
                       <h3 class="footer-title hidden-xs hidden-sm">Get quick support</h3>
                       <div class="footer-qrcode clearfix hidden-xs hidden-sm">
-                          <div class="qrcode-wrapper mc_qr3"><span>Public No, for quick support</span></div>
+                          <div class="qrcode-wrapper mc_qr3"><span>Scan the Azure Support Official Acc. now</span></div>
                       </div>
                   </li>
                   <li>
@@ -29,7 +29,7 @@
                           <li><a id="footer-calculator-id" href="https://www.azure.cn/pricing/calculator/" title="Pricing Calculator"> Pricing Calculator </a></li>
                           <li><a id="footer-offer-rate-id" href="https://www.azure.cn/support/legal/offer-rate-plans/" title="Discount Details"> Discount Details </a></li>
                           <li><a id="footer-starter-guide-id" href="https://docs.azure.cn/articles/azure-china-purchasing-guidance" title="Azure in China Purchase Guidance"> Azure in China Purchase Guidance </a></li>
-                          <li><a id="footer-video-center-id" href="https://www.azure.cn/video-center/" title="Video Conferencing"> Video Conferencing </a></li>
+                          <li><a id="footer-video-center-id" href="https://www.azure.cn/video-center/" title="Video Center"> Video Center </a></li>
                           <li><a id="footer-solutions-id" href="https://www.azure.cn/solutions/virtual-machines/" title="Common Solutions"> Common Solutions </a></li>
                           <li><a id="footer-casestudy-id" href="https://www.azure.cn/partnerancasestudy/case-studies/" title="Customer Use Cases"> Customer Use Cases </a></li>
                           <li><a id="footer-documentation-id" href="/" title="Technology Files"> Technology Files </a></li>
@@ -49,7 +49,7 @@
                           <li><a id="footer-police-id" href="https://www.azure.cn/support/announcement/public-security-registration/" title="Public Security File"> Public Security File </a></li>
                           <li><a id="footer-fapiao-id" href="https://www.azure.cn/pricing/billing/azure-fapiao-process/" title="Fapiao Claim">Fapiao Claim</a></li>
                           <li><a id="footer-support-faq-id" href="https://www.azure.cn/support/faq/" title="Frequently Asked Questions"> Frequently Asked Questions </a></li>
-                          <li><a id="footer-news-id" href="https://www.azure.cn/what-is-new/" title="Recent Announcements"> Recent Announcement </a></li>
+                          <li><a id="footer-news-id" href="https://www.azure.cn/what-is-new/" title=" Azure Updates "> Azure Updates </a></li>
                       </ul>
                   </li>
                   <li>
@@ -67,8 +67,8 @@
                       <h3 id="footer_account" class="menu-title footer-title icon-arrow-down-sharp2">Account</h3>
                       <ul class="menu-child">
                           <li><a id="footer-portal-id" href="https://portal.azure.cn/" title="Azure portal"> Azure portal </a></li>
-                          <li><a id="footer-account-id" href="https://account.windowsazure.cn/" title="Subscription and Billing"> Subscription and Billing </a></li>
-                          <li><a id="footer-ea-id" href="http://ea.windowsazure.cn/" title="Company Web Portal"> Company Web Portal </a></li>
+                          <li><a id="footer-account-id" href="https://account.windowsazure.cn/" title="Account Portal"> Account Portal </a></li>
+                          <li><a id="footer-ea-id" href="http://ea.windowsazure.cn/" title="Enterprise Portal">Enterprise Portal</a></li>
                       </ul>
                   </li>
               </ul>
@@ -98,8 +98,8 @@
           <div class="dialog-header"><a class="close-btn" href="#"> <i class="icon icon-close"></i> </a></div>
           <div class="dialog-body">
               <div class="weixin-qrcode">
-                  <p class="hidden-xs hidden-sm">QR Code<strong>Microsoft Cloud S&amp;T</strong>Official WeChat, find out for yourself information about Microsoft Cloud Computing.</p>
-                  <p class="hidden-md hidden-lg mobile-dialog">Look up WeChat’s Public No.<strong>Microsoft Cloud S&amp;T</strong>, find out for yourself information about Microsoft Cloud Computing.</p>
+                  <p class="hidden-xs hidden-sm">QR Code<strong>Microsoft Cloud S&amp;T</strong>Get the latest news about Microsoft Cloud Computing with the Official WeChat Account.</p>
+                  <p class="hidden-md hidden-lg mobile-dialog">Search for WeChat Official Account<strong>Microsoft Cloud S&amp;T</strong>Get the latest news about Microsoft Cloud Computing with the Official WeChat Account.</p>
               </div>
           </div>
       </div>
